@@ -9,6 +9,8 @@ combineRecomputedResults(
   test,
   trained,
   quantile = 0.8,
+  fine.tune = TRUE,
+  tune.thresh = 0.05,
   assay.type.test = "logcounts",
   check.missing = FALSE,
   warn.lost = TRUE,
@@ -28,6 +30,10 @@ equivalent to either (i) the output of \code{\link{trainSingleR}} on multiple re
 or (ii) running \code{trainSingleR} on each reference separately and manually making a list of the trained outputs.}
 
 \item{quantile}{Numeric scalar specifying the quantile of the correlation distribution to use for computing the score, see \code{\link{classifySingleR}}.}
+
+\item{fine.tune}{A logical scalar indicating whether fine-tuning should be performed.}
+
+\item{tune.thresh}{A numeric scalar specifying the maximum difference from the maximum correlation to use in fine-tuning.}
 
 \item{assay.type.test}{An integer scalar or string specifying the assay of \code{test} containing the relevant expression matrix,
 if \code{test} is a \linkS4class{SummarizedExperiment} object.}
@@ -67,17 +73,17 @@ Unlike \code{\link{combineCommonResults}}, this does not assume that each run of
 \details{
 Here, the strategy is to perform classification separately within each reference, 
 then collate the results to choose the label with the highest score across references.
-For a given cell in \code{test}, we extract its assigned label from \code{results} for each reference.
-We also retrieve the marker genes associated with that label and take the union of markers across all references.
+For a given cell in \code{test}, we extract its assigned label from each reference in \code{results}, along with the marker genes associated with that label.
+We take the union of the markers for the assigned labels across all references.
 This defines a common feature space in which the score for each reference's assigned label is recomputed using \code{ref};
 the label from the reference with the top recomputed score is then reported as the combined annotation for that cell.
 
-A key aspect of this approach is that each entry of \code{results} is generated with reference-specific markers.
-This avoids the inclusion of noise from irrelevant genes in the within-reference assignments.
+A key aspect of this approach is that each entry of \code{results} is generated separately for each reference.
+This avoids problems with unintersting technical or biological differences between references that could otherwise introduce noise by forcing irrelevant genes into the marker list. 
 Similarly, the common feature space for each cell is defined from the most relevant markers across all references,
 analogous to one iteration of fine-tuning using only the best labels from each reference.
-Compare this to the alternative approach of creating a common feature space, where we force all per-reference classifications to use the same set of markers;
-this would slow down each individual classification as many more genes are involved.
+Indeed, if fine-tuning is enabled, the common feature space is iteratively refined from the labels with the highest scores, using the same process described in \code{\link{classifySingleR}}.
+This allows us to distinguish between closely-related labels from different references.
 }
 \section{Dealing with mismatching gene availabilities}{
 
